--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/kuvanch/RabbitMQ#readme",
   "dependencies": {
     "amqplib": "^0.10.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "node-fetch": "^2.6.1"
   }
