--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-AMQP_URL = 
-QUEUE_TO_LISTEN = 
-ENDPOINT = 
-TOKEN = 
+AMQP_URL = amqp://rmuser:rmpassword@127.0.0.1:5672
+QUEUE_TO_LISTEN = test
+ENDPOINT = https://elma365.mkb.uz/pub/v1/app/test/callback/create
+TOKEN = Bearer 7fe5e760-54c0-4770-abe3-0097a6afa8a7
